# active-inference-diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
active_inference_diffusion/: __init__.py
active_inference_diffusion/agents/: __init__.py  base_agent.py  pixel_agent.py  state_agent.py
active_inference_diffusion/configs/: __init__.py  config.py
active_inference_diffusion/core/: __init__.py  active_inference.py  belief_dynamics.py  diffusion.py  free_energy.py
active_inference_diffusion/encoder/: __init__.py  state_encoders.py  visual_encoders.py
active_inference_diffusion/envs/: __init__.py  parallel_wrapper.py  pixel_wrappers.py  vec_env.py  wrappers.py
active_inference_diffusion/models/: __init__.py  dynamics_models.py  policy_networks.py  score_networks.py  value_networks.py
active_inference_diffusion/utils/: __init__.py  async_collector.py  buffers.py  logger.py  training.py  util.py
examples/: train_mujoco.py  train_pixel_mujoco.py
examples/configs/: config.py  halfcheetah_pixel.yaml  halfcheetah_state.yaml  hopper_pixel.yaml
